footer bs21 and new logo

--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -162,7 +162,7 @@
             p {
                 font-size: .85rem;
                 font-weight: 400;
-                color: #fff9;
+                color: $brand;
                 // margin-bottom: .25rem;
                 // text-decoration: underline;
                 a {
