--- a/css/style.css
+++ b/css/style.css
@@ -98,11 +98,11 @@ hamburger
   height: 0.3em;
 }
 #header .hamburger.active .bar::before {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #cccccc;
   transform: translateY(0) skewY(40deg);
 }
 #header .hamburger.active .bar::after {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #cccccc;
   transform: translateY(0) skewY(-40deg) skewX(0);
 }
 
@@ -474,7 +474,7 @@ hamburger
   display: grid;
   place-items: center;
   isolation: isolate;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   text-transform: capitalize;
   animation: spinner-out 1s ease 4s forwards;
 }
@@ -673,7 +673,7 @@ hamburger
   background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   border-radius: 0;
   transition: 0.2s;
 }
@@ -1138,7 +1138,7 @@ hamburger
 .welcome-section .hero #hero-content .hero-title p, .welcome-section .hero #hero-content .slogan p, .welcome-section .hero #hero-h1 .hero-title p, .welcome-section .hero #hero-h1 .slogan p {
   font-size: 0.85rem;
   font-weight: 400;
-  color: #fff9;
+  color: #cccccc;
 }
 .welcome-section .hero #hero-content .hero-title p a, .welcome-section .hero #hero-content .slogan p a, .welcome-section .hero #hero-h1 .hero-title p a, .welcome-section .hero #hero-h1 .slogan p a {
   color: inherit;
@@ -1687,7 +1687,7 @@ hamburger
   position: absolute;
   left: -0.5em;
   bottom: 1em;
-  background-image: radial-gradient(circle at top, rgba(255, 255, 255, 0.7), 50%, #000);
+  background-image: radial-gradient(circle at top, #cccccc, 50%, #000);
   animation: scene 20s infinite linear reverse;
 }
 @keyframes ball-bounce {
@@ -1751,7 +1751,7 @@ hamburger
   font-size: 0.25em;
   text-transform: uppercase;
   transition: 0.25s;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   pointer-events: none;
 }
 .cube .left:hover,
@@ -1933,7 +1933,7 @@ hamburger
   font-weight: 600;
   margin-left: 0.5rem;
   font-size: 1rem;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   transition: 0.5s;
 }
 #skills .skills .dropdown .dropbtn::before, #skills .skills .dropdown .dropbtn::after {
@@ -1961,7 +1961,7 @@ hamburger
 #skills .skills .dropdown .dropbtn.active {
   transform: scale(0.98);
   letter-spacing: normal;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
 }
 @media (max-width: 768px) {
   #skills .skills .dropdown .dropbtn.active {
@@ -1979,7 +1979,7 @@ hamburger
 }
 @media (min-width: 768px) {
   #skills .skills .dropdown .dropbtn:hover {
-    color: rgba(255, 255, 255, 0.7);
+    color: #cccccc;
   }
   #skills .skills .dropdown .dropbtn:hover::before {
     opacity: 0.8;
@@ -2086,7 +2086,7 @@ hamburger
   color: #f4f4f4;
 }
 #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item ul li::marker {
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   color: #fff4;
 }
 #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item::after {
@@ -2382,7 +2382,7 @@ hamburger
 }
 #contact .contact .contact-items .contact-item .title h3 {
   color: #f4f4f4;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   font-size: 0.85rem;
   font-weight: 600;
   position: relative;
@@ -2647,7 +2647,7 @@ hamburger
   font-weight: 500;
   margin: 0.5rem 0;
   text-transform: capitalize;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   transition: 0.3s;
 }
 @media (min-width: 768px) {
@@ -2679,7 +2679,7 @@ hamburger
 }
 #projects .projects .all-projects .project-item .project-tile a i {
   transition: 0.2s;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   font-size: 0.8rem;
   padding: 0.5rem 0;
 }
@@ -2759,7 +2759,7 @@ hamburger
 }
 #projects .projects .all-projects .project-item .tech-list ul li {
   font-size: 0.8em;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   list-style: none;
   padding: 0.4em 0.3em;
   margin-right: 0.1em;
@@ -2973,7 +2973,7 @@ hamburger
   border-radius: 0.25rem;
 }
 .work .work-items .work-item .scroll-snap::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #cccccc;
   border-radius: 0.25rem;
 }
 .work .work-items .work-item .scroll-snap::-webkit-scrollbar-track {
@@ -3162,7 +3162,7 @@ hamburger
   font-size: 0.6em;
   font-weight: 600;
   text-transform: capitalize;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   background-color: #dc143c;
   border-radius: 10px;
   transition: 0.5s ease;
@@ -3662,7 +3662,7 @@ hamburger
   right: 1rem;
   top: 1rem;
   font-size: 4rem;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   opacity: 0.1;
   transition: 0.25s;
 }
@@ -3671,7 +3671,7 @@ hamburger
   margin-bottom: 0.25rem;
   text-transform: capitalize;
   color: #f4f4f4;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   font-weight: 400;
   font-family: "Kanit", sans-serif;
   transition: 1s ease;
@@ -3926,7 +3926,7 @@ hamburger
 }
 #footer .footer .brand h2 {
   font-family: "Ubuntu", sans-serif;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.1em;
@@ -3980,7 +3980,7 @@ hamburger
   content: "";
   font-size: 1.5em;
   text-align: center;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   opacity: 1;
   background-image: linear-gradient(0deg, #252e36c4, #6e051a9c);
   box-shadow: inset 3px 3px 5px #ddda, inset -3px 0px 5px #000;
@@ -4020,7 +4020,7 @@ hamburger
   bottom: -140%;
   left: -0.5em;
   font-size: 0.5em;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -4251,7 +4251,7 @@ section .section-title.active-item {
 }
 .section-pad.pad-logo {
   overflow: hidden;
-  height: 60vh;
+  height: 80vh;
   background-color: #29323c;
 }
 .section-pad.pad-logo [data-scroll=in] {
@@ -4407,7 +4407,7 @@ section .section-title.active-item {
   box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a;
 }
 #thanks h3 {
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   margin: 0.5em auto;
   font-size: 1em;
 }
@@ -4417,7 +4417,7 @@ section .section-title.active-item {
   margin: 1em auto;
   padding: 0.5em 3em;
   text-align: center;
-  color: rgba(255, 255, 255, 0.7);
+  color: #cccccc;
   position: relative;
 }
 #thanks a i::after {
