--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -293,7 +293,7 @@
                 // IO CLASS 
                 &.io-item {
                     .title {
-                        transform: translateY(15vh);
+                        transform: translateY(100%);
                         opacity: 1;
                         transition: 1.5s;
                         .icon {
