--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -747,17 +747,15 @@
     width: 100%;
     // border: 2px solid $overlay-blue-dark;
     border-radius: .5rem;
-    padding: 5vh 0;
+    padding: 5vh 5vw;
     margin: 0 auto;
-    width: 90%;
     text-align: center;
-
+    
     @media (min-width: 768px) {
         padding: 10vh 0;
-        width: 100%;
     }
     p,
-    a {
+    a, span {
         font-family: $font-title;
         color: $text-light;
         font-size: 1rem;
@@ -776,6 +774,7 @@
     .date {
         // margin: .5em 0;
         color: $text-light;
+        // display: inline-block;
         display: block;
         font-family: $font-title;
     }
