--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -21,7 +21,7 @@ $span-gold: #ead2a1;
 $span-light: #fff9;
 $light-span: #fff9;
 $brand: hsla(0, 0%, 100%, 0.6);
-$brand: #cccccc;
+$brand: #bfbfbf;
 $span-brand: #f72751;
 $span-violet: violet;
 $span-blue: #0000ff;
