--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -758,7 +758,7 @@
     a, span {
         font-family: $font-title;
         color: $text-light;
-        font-size: 1rem;
+        font-size: .95rem;
         font-weight: 400;
         text-transform: capitalize;
         @media (min-width: 768px) {
