--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -302,13 +302,13 @@
 
                         // IO CLASS
                         &.io-item {
-                            transform: scale(.5);
-                            opacity: 0;
+                            transform: scale(0);
+                            // opacity: 0;
                             transition: .5s;
                         }
                         &.active-item {
                             transform: scale(1);
-                            opacity: 1;
+                            // opacity: 1;
                             transition: 1.5s;
                         }
 
