--- a/css/style.css
+++ b/css/style.css
@@ -2045,10 +2045,12 @@ hamburger
 }
 #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item.io-item {
   transform: scale(0);
+  opacity: 0;
   transition: 0.5s;
 }
 #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item.active-item {
   transform: scale(1);
+  opacity: 1;
   transition: 1.5s;
 }
 @media (min-width: 576px) {
