--- a/css/style.css
+++ b/css/style.css
@@ -2623,7 +2623,7 @@ hamburger
     padding: 2em;
   }
 }
-#projects .projects .all-projects .project-item .project-tile h2 {
+#projects .projects .all-projects .project-item .project-tile h3 {
   font-size: 1.15rem;
   width: 100%;
   color: #f4f4f4;
@@ -2637,11 +2637,11 @@ hamburger
   border-bottom: 1px dashed #f4f4f4;
 }
 @media (min-width: 768px) {
-  #projects .projects .all-projects .project-item .project-tile h2 {
+  #projects .projects .all-projects .project-item .project-tile h3 {
     font-size: 1.5rem;
   }
 }
-#projects .projects .all-projects .project-item .project-tile h3 {
+#projects .projects .all-projects .project-item .project-tile h4 {
   font-size: 1rem;
   line-height: 1.5;
   font-weight: 500;
@@ -2651,7 +2651,7 @@ hamburger
   transition: 0.3s;
 }
 @media (min-width: 768px) {
-  #projects .projects .all-projects .project-item .project-tile h3 {
+  #projects .projects .all-projects .project-item .project-tile h4 {
     font-size: 1.25rem;
   }
 }
@@ -2666,7 +2666,7 @@ hamburger
     font-size: 1rem;
   }
 }
-#projects .projects .all-projects .project-item .project-tile a {
+#projects .projects .all-projects .project-item .project-tile .project-info {
   color: #fff;
   background: #20262e;
   margin: 0.5em 0 0.5em;
@@ -2677,35 +2677,71 @@ hamburger
   border-radius: 0.5rem;
   transition: all 0.3s ease;
 }
-#projects .projects .all-projects .project-item .project-tile a i {
-  transition: 0.2s;
-  color: #bfbfbf;
-  font-size: 0.8rem;
-  padding: 0.5rem 0;
-}
-#projects .projects .all-projects .project-item .project-tile a i::after {
-  content: "view page";
-  font-family: "Kanit", sans-serif;
-  letter-spacing: 0.15rem;
+#projects .projects .all-projects .project-item .project-tile .project-info a {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 10rem;
+  padding: 0.5rem;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
   text-transform: capitalize;
   color: #f4f4f4;
-  font-weight: 200;
-  font-size: 0.9rem;
-  transition: 0.3s;
-  background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
+  position: relative;
+  isolation: isolate;
+}
+#projects .projects .all-projects .project-item .project-tile .project-info a::before, #projects .projects .all-projects .project-item .project-tile .project-info a::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.25s;
   border-radius: 0.5rem;
-  padding: 0.25rem 0.5rem;
-  margin-left: 0.5rem;
-  opacity: 1;
-  transition: 0.3s ease;
+  z-index: -1;
 }
-#projects .projects .all-projects .project-item .project-tile a:hover h2 {
-  color: #ead2a1;
+#projects .projects .all-projects .project-item .project-tile .project-info a::before {
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
-#projects .projects .all-projects .project-item .project-tile a:hover i {
-  color: #f4f4f4;
-  transform: translateX(0.5em);
+#projects .projects .all-projects .project-item .project-tile .project-info a::after {
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
+  opacity: 0;
+}
+#projects .projects .all-projects .project-item .project-tile .project-info a i {
+  color: #bfbfbf;
+  font-size: 0.8rem;
+  transition: 0.25s;
+  opacity: 0.5;
+  transform: translateX(0.25rem) scale(0.8);
+}
+@media (min-width: 768px) {
+  #projects .projects .all-projects .project-item .project-tile .project-info a:hover {
+    transform: scale(0.98);
+  }
+  #projects .projects .all-projects .project-item .project-tile .project-info a:hover::before {
+    opacity: 0;
+  }
+  #projects .projects .all-projects .project-item .project-tile .project-info a:hover::after {
+    opacity: 1;
+  }
+  #projects .projects .all-projects .project-item .project-tile .project-info a:hover i {
+    color: #f4f4f4;
+  }
+}
+@media (max-width: 768px) {
+  #projects .projects .all-projects .project-item .project-tile .project-info a:hover {
+    transform: scale(0.98);
+  }
+  #projects .projects .all-projects .project-item .project-tile .project-info a:hover::before {
+    opacity: 0;
+  }
+  #projects .projects .all-projects .project-item .project-tile .project-info a:hover::after {
+    opacity: 1;
+  }
+  #projects .projects .all-projects .project-item .project-tile .project-info a:hover i {
+    color: #f4f4f4;
+  }
 }
 #projects .projects .all-projects .project-item .project-img {
   flex-basis: 50%;
@@ -2775,9 +2811,9 @@ hamburger
 #projects .projects .all-projects .project-item:hover.project-item .project-img::after {
   opacity: 0.7;
 }
-#projects .projects .all-projects .project-item:hover.project-item .project-tile a i::after {
+#projects .projects .all-projects .project-item:hover.project-item .project-tile .project-info a i {
   opacity: 1;
-  margin-left: 0.5em;
+  transform: translate(0) scale(1);
 }
 
 .work {
