--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -752,7 +752,7 @@
     text-align: center;
     
     @media (min-width: 768px) {
-        padding: 10vh 0;
+        padding: 5vh 0 5vh;
     }
     p,
     a, span {
