--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,7 +101,7 @@ section {
     width: 100%;
     background-color: $background-light;
     // background-color: yellow;
-    padding: 10vh 20vw;
+    padding: 10vh 20vw 5vh;
     display: grid;
     place-items: center;
     position: relative;
@@ -110,7 +110,7 @@ section {
     figure {
         width: 100%;
         height: 100%;
-        margin: 5vh auto;
+        margin: 5vh auto 0;
         border-radius: 5px;
         overflow: hidden;        
         img {
@@ -121,7 +121,7 @@ section {
         }
     }
     // small screens
-    @media (max-width: 1024px) {
+    @media (max-width: 768px) {
         height: auto;
         padding: 0 5vw 5vh;
         // background: yellow;
@@ -142,21 +142,34 @@ section {
 
     &.pad-logo {
         overflow: hidden;
-        height: 80vh;
+        height: 60vh;
         background-color: $overlay-blue-dark;
-
-        [data-scroll="in"] {
-            transition: 2s;
-                transform: scale(1);
-        }
+        // border: 2px solid yellow;
         
         figure {
-            transform: scale(1);
             margin: 0 auto;
+            // overflow: hidden;
             // border: 2px solid red;
             img {
                 object-fit: cover;
             }
+            // IO CLASS
+        &.io-item {
+            img {
+                transform: translateY(-35vh);
+                @include md {
+                    transform: translateY(-55vh);
+                }
+                opacity: 1;
+                transition: 2s ease;
+            }
+        }
+        &.active-item {
+            img {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
         }
         // logo pad on small screens
         @media (max-width: 768px) {
@@ -173,6 +186,7 @@ section {
             
         }
         // end of logo pad on small screens
+        
     }
     &.pad-intro {
         figure {
