--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -78,7 +78,7 @@
                     background: $overlay-blue-darker;
                     outline: 2px solid $span-gold;
                     color: $span-gold;
-                    overflow: hidden;
+                    // overflow: hidden;
 
                     &:invalid {
                         // background-color: $background-invalid;
