--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -178,7 +178,7 @@
                 
 
                 @include md {
-                    height: 60vh;
+                    height: auto;
                 }
 
                 &::-webkit-scrollbar {
