--- a/css/style.css
+++ b/css/style.css
@@ -2842,7 +2842,6 @@ hamburger
 }
 .work .work-items .work-item {
   padding: 0;
-  width: 95%;
   width: 100%;
   border-radius: 0.5rem;
   display: flex;
@@ -2955,30 +2954,33 @@ hamburger
   transition: 0.5s;
 }
 .work .work-items .work-item .scroll-snap {
+  padding: 1.5rem;
   position: relative;
   display: flex;
-  gap: 5vw;
+  gap: 10vw;
   overflow-x: auto;
   overflow-y: hidden;
   flex: none;
   width: 15rem;
-  width: 85%;
+  width: 90%;
   border-radius: 0.5rem;
-  height: auto;
-  height: 60vh;
+  height: 65vh;
   isolation: isolate;
   flex-flow: row nowrap;
   scroll-snap-type: x mandatory;
 }
 .work .work-items .work-item .scroll-snap img {
+  border: none;
   scroll-snap-align: center;
   flex: none;
   width: 100%;
-  height: auto;
+  height: 100%;
+  border-radius: 0.5rem;
+  object-fit: contain;
 }
-@media (min-width: 768px) {
+@media (min-width: 576px) {
   .work .work-items .work-item .scroll-snap {
-    height: auto;
+    height: 60vh;
   }
 }
 .work .work-items .work-item .scroll-snap::-webkit-scrollbar {
