--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -22,7 +22,6 @@
         .work-item {
             // border: 1px solid #ff0000;
             padding: 0;
-            width: 95%;
             width: 100%;
             border-radius: $brand-br;
             display: flex;
@@ -153,32 +152,34 @@
             .scroll-snap {
                 // border: 2px solid blue;
                 // background: #f4f4f4;
+                padding: 1.5rem;
                 position: relative;
                 display: flex;
-                gap: 5vw;
+                gap: 10vw;
                 overflow-x: auto;
                 overflow-y: hidden;
                 flex: none;
                 width: 15rem;
-                width: 85%;
+                width: 90%;
                 border-radius: $brand-br;
-                height: auto;
-                height: 60vh;
+                height: 65vh;
                 isolation: isolate;
                 // height: 128px;
                 flex-flow: row nowrap;
                 scroll-snap-type: x mandatory;
                 img {
+                    border: none;
                     // border: 2px solid yellow;
                     scroll-snap-align: center;
                     flex: none;
                     width: 100%;
-                    height: auto;
+                    height: 100%;
+                    border-radius: $brand-br;
+                    object-fit: contain;
                 }
-                
 
-                @include md {
-                    height: auto;
+                @include sm {
+                    height: 60vh;
                 }
 
                 &::-webkit-scrollbar {
