--- a/css/style.css
+++ b/css/style.css
@@ -3139,8 +3139,7 @@ hamburger
 @media (min-width: 768px) {
   .about {
     flex-direction: row;
-    align-items: center;
-    padding: 5vh 5vw;
+    align-items: flex-start;
   }
 }
 .about .col-right {
@@ -3163,6 +3162,7 @@ hamburger
   .about .col-right {
     width: 100%;
     margin: 0;
+    height: 100%;
   }
 }
 .about .col-right .about-title {
@@ -3416,12 +3416,12 @@ hamburger
   z-index: 20;
   transform-style: preserve-3d;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .about .col-left {
     width: 100%;
     height: 70vh;
     position: sticky;
-    top: 20vh;
+    top: 10vh;
   }
 }
 .about .col-left .about-img {
@@ -3452,11 +3452,11 @@ hamburger
   border-radius: 10px;
   transition: 1s ease;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
-@media (max-width: 768px) {
+@media (min-width: 576px) {
   .about .col-left .about-img::before, .about .col-left .about-img::after {
-    background-size: cover;
+    background-size: contain;
   }
 }
 .about .col-left .about-img::before {
