--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -13,10 +13,12 @@
     min-height: 100vh;
     
     // DESKTOP
-    @media (min-width: 768px){
+    @include md {
         flex-direction: row;
-        align-items: center;
-        padding: 5vh 5vw;
+        align-items: flex-start;
+        // padding: 5vh 5vw;
+        // border: 2px solid red;
+        // overflow: hidden;
     }
     // COL RIGHT = TITLE & ARTICLE
     .col-right {
@@ -37,9 +39,12 @@
         border-radius: 5px;
         position: relative;
         // desktop
-        @media (min-width: 768px) {
+        @include md {
             width: 100%;
             margin: 0;
+            height: 100%;
+            // overflow: hidden;
+            // border: 2px solid yellow;
         }
         // end of desktop
         .about-title {
@@ -349,29 +354,22 @@
     .col-left {
         // display: none;
         // border: 2px solid red;
-        @media (min-width: 1024px) {
-            width: 100%;
-            height: 70vh;
-            position: sticky;
-            top: 20vh;
-        }
-        // display: flex;
-        // justify-content: center;
-        // align-items: center;
         width: 100%;
         height: 360px;
         height: 70vh;
         margin-top: 0;
         z-index: 20;
         transform-style: preserve-3d;
+        @include md {
+            width: 100%;
+            height: 70vh;
+            position: sticky;
+            top: 10vh;
+            // border: 2px solid blue;
+        }
         // about images
         .about-img {
-            // border: 2px solid red;
-            @media (min-width: 1024px){
-                // margin-top: 0;
-                // height: 100%;
-                // width: 80%;
-            }
+            // border: 2px solid blue;
             height: 100%;
             width: 100%;
             position: relative;
@@ -400,9 +398,9 @@
                 border-radius: 10px;
                 transition: 1s ease;
                 background-repeat: no-repeat;
-                background-size: contain;
-                @media (max-width: 768px) {
-                    background-size: cover;
+                background-size: cover;
+                @include sm {
+                    background-size: contain;
                 }
             }
 
