--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -6,9 +6,96 @@
         padding: 5vh 5vw;
     }
 
+    .work-container {
+        border: 2px solid red;
+        .item-flex-container {
+            @include md {
+                display: flex;
+                flex-direction: row-reverse;
+                justify-content: flex-end;
+                gap: 10vw;
+            }
+        }
+
+        .item {
+            border: 2px solid blue;
+            height: 40vh;
+            height: auto;
+            overflow: hidden;
+            padding: 1rem;
+            @include md {
+                padding: 5vh 5vw;
+            }
+            .item-header {
+                // display: grid;
+                border: 2px solid red;
+                .item-title {
+                    text-transform: capitalize;
+                    // margin-bottom: 5vh;
+                }
+                .item-meta-data {
+                    border: 2px solid yellow;
+                    display: flex;
+                    align-items: start;
+                    justify-content: space-between;
+                    list-style: none;
+                    // margin-bottom: 5vh;
+
+                    li {
+                        border: 1px solid #000;
+                        border-radius: .25rem;
+                        padding: .2rem;
+                        // height: 1rem;
+                    }
+
+                    @include md {
+                        gap: 1rem;
+                    }
+                }
+                .item-description {
+                    border: 1px solid pink;
+                }
+                .item-cta {
+                    border: 2px solid blue;
+                    margin: 5vh 0;
+                    display: flex;;
+                    a {
+                        border: 2px solid #000;
+                        padding: .5rem;
+                        text-transform: capitalize;
+                        font-size: .9rem;
+                        border-radius: .25rem;
+                    }
+                    @include md {
+                        justify-content: space-between;
+                        
+                    }
+                }
+            }
+            .item-content {
+                border: 2px solid yellow;
+                .item-image {
+                    height: 100%;
+                    width: 100%;
+                    border: 6px solid green;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        border: 5px solid pink;
+                    }
+                    @include sm {
+                        width: 20rem;
+                    }
+                }
+            }
+        }
+    }
+
+    // WORK ITEM 
     .work-items {
-        margin-top: 10vh;
         display: grid;
+        display: none;
+        margin-top: 10vh;
         grid-template-columns: 1fr;
         gap: 10vh;
         @include lg {
