--- a/css/style.css
+++ b/css/style.css
@@ -636,12 +636,12 @@ hamburger
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  padding: 0.5rem 5vw;
+  padding: 0 5vw;
   z-index: 5;
 }
-@media (max-width: 1024px) {
+@media (max-width: 450px) {
   .header .navbar #nav {
-    padding: 0 5vw;
+    padding: 0 1rem;
   }
 }
 .header .navbar #nav .logo {
@@ -1821,13 +1821,17 @@ hamburger
   padding: 5vh 0;
 }
 #skills .skills .skills-intro {
-  border: 2px solid red;
   text-align: left;
   margin: 0 auto 0;
   padding: 2.5vh 2.5vw 0 5vw;
   padding: 1rem;
   position: relative;
   z-index: 30;
+}
+@media (min-width: 576px) {
+  #skills .skills .skills-intro {
+    padding: 5vh 5vw;
+  }
 }
 @media (min-width: 768px) {
   #skills .skills .skills-intro {
@@ -2809,46 +2813,66 @@ hamburger
     padding: 5vh 5vw;
   }
 }
-.work .work-container {
-  border: 2px solid red;
-}
 @media (min-width: 768px) {
   .work .work-container .item-flex-container {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-    gap: 10vw;
+    gap: 1rem;
   }
 }
 .work .work-container .item {
-  border: 2px solid blue;
-  height: 40vh;
-  height: auto;
   overflow: hidden;
-  padding: 1rem;
+  padding: 0 0 1rem 0;
+}
+@media (min-width: 576px) {
+  .work .work-container .item {
+    padding: 1rem;
+  }
 }
 @media (min-width: 768px) {
   .work .work-container .item {
-    padding: 5vh 5vw;
+    padding: 0rem;
   }
 }
-.work .work-container .item .item-header {
-  border: 2px solid red;
+@media (min-width: 768px) {
+  .work .work-container .item .item-header {
+    display: grid;
+    width: 50%;
+  }
 }
 .work .work-container .item .item-header .item-title {
   text-transform: capitalize;
+  margin: 1rem 0;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+@media (min-width: 768px) {
+  .work .work-container .item .item-header .item-title {
+    margin: 0;
+    font-size: 1.5rem;
+  }
 }
 .work .work-container .item .item-header .item-meta-data {
-  border: 2px solid yellow;
   display: flex;
   align-items: start;
-  justify-content: space-between;
+  gap: 1rem;
   list-style: none;
+  margin: 0 0 1rem 0;
+}
+@media (min-width: 768px) {
+  .work .work-container .item .item-header .item-meta-data {
+    margin: 0;
+  }
 }
 .work .work-container .item .item-header .item-meta-data li {
-  border: 1px solid #000;
   border-radius: 0.25rem;
-  padding: 0.2rem;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.8rem;
+  background: #20262e;
+  color: #f4f4f4;
+  transition: 0.25s;
+}
+.work .work-container .item .item-header .item-meta-data li:hover {
+  color: #bfbfbf;
 }
 @media (min-width: 768px) {
   .work .work-container .item .item-header .item-meta-data {
@@ -2856,42 +2880,72 @@ hamburger
   }
 }
 .work .work-container .item .item-header .item-description {
-  border: 1px solid pink;
+  margin-bottom: 1rem;
+  font-weight: 500;
+}
+@media (min-width: 768px) {
+  .work .work-container .item .item-header .item-description {
+    margin-bottom: 0;
+  }
 }
 .work .work-container .item .item-header .item-cta {
-  border: 2px solid blue;
-  margin: 5vh 0;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
 .work .work-container .item .item-header .item-cta a {
-  border: 2px solid #000;
-  padding: 0.5rem;
+  border: 1px solid #000;
+  padding: 1rem 0.5rem;
   text-transform: capitalize;
-  font-size: 0.9rem;
+  font-size: 0.95rem;
   border-radius: 0.25rem;
+  width: 100%;
+  text-align: center;
+  letter-spacing: 0.025rem;
+  transition: 0.25s;
+}
+.work .work-container .item .item-header .item-cta a.cta-primary {
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
+  border: none;
+  color: #f4f4f4;
+}
+.work .work-container .item .item-header .item-cta a.cta-primary i {
+  transform: translateX(-0.25rem);
+  transition: 0.25s;
+}
+.work .work-container .item .item-header .item-cta a.cta-secondary {
+  font-size: 0.85rem;
+}
+.work .work-container .item .item-header .item-cta a:hover {
+  transform: scale(0.98);
+  letter-spacing: normal;
+}
+.work .work-container .item .item-header .item-cta a:hover i {
+  transform: translateX(-0.15rem);
 }
 @media (min-width: 768px) {
   .work .work-container .item .item-header .item-cta {
     justify-content: space-between;
+    gap: 1rem;
   }
 }
 .work .work-container .item .item-content {
-  border: 2px solid yellow;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .work .work-container .item .item-content {
+    width: 50%;
+  }
 }
 .work .work-container .item .item-content .item-image {
-  height: 100%;
   width: 100%;
-  border: 6px solid green;
+  margin: 0 auto;
 }
 .work .work-container .item .item-content .item-image img {
   width: 100%;
   height: 100%;
-  border: 5px solid pink;
-}
-@media (min-width: 576px) {
-  .work .work-container .item .item-content .item-image {
-    width: 20rem;
-  }
+  border-radius: 0.25rem;
 }
 .work .work-items {
   display: grid;
