--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -15,26 +15,23 @@
 
         // end of skills container
 
-        // skills top section
+        // SKILLS T=INTRO
         .skills-intro {
+            // border: 2px solid red;
+            text-align: left;
+            margin: 0 auto 0;
+            padding: 2.5vh 2.5vw 0 5vw;
+            padding: 1rem;
+            position: relative;
+            z-index: 30;
+            @include sm {
+                padding: 5vh 5vw;
+            }
             @include md {
                 width: 100%;
                 padding: 0vh 5vw 0;
                 text-align: center;
             }
-
-            // width: 90%;
-            border: 2px solid red;
-            text-align: left;
-            margin: 0 auto 0;
-            padding: 2.5vh 2.5vw 0 5vw;
-            padding: 1rem;
-
-            // padding: 1rem .5rem .5rem 1rem;
-            // padding: 2.5vh 2.5vw 0 5vw;
-            position: relative;
-            z-index: 30;
-
             .skills-article {
                 p {
                     color: $text-light;
