--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -7,45 +7,69 @@
     }
 
     .work-container {
-        border: 2px solid red;
+        // border: 2px solid red;
         .item-flex-container {
             @include md {
                 display: flex;
-                flex-direction: row-reverse;
-                justify-content: flex-end;
-                gap: 10vw;
+                gap: 1rem;
             }
+            
         }
 
         .item {
-            border: 2px solid blue;
-            height: 40vh;
-            height: auto;
+            // border: 2px solid blue;
+            // height: auto;
             overflow: hidden;
-            padding: 1rem;
-            @include md {
-                padding: 5vh 5vw;
+            padding: 0 0 1rem 0;
+            @include sm {
+                padding: 1rem;
             }
+            @include md {
+                padding: 0rem;
+            }
+            
             .item-header {
                 // display: grid;
-                border: 2px solid red;
+                // border: 2px solid red;
+                @include md {
+                    display: grid;
+                    width: 50%;
+                }
                 .item-title {
                     text-transform: capitalize;
-                    // margin-bottom: 5vh;
+                    margin: 1rem 0;
+                    font-size: 1.25rem;
+                    font-weight: 600;
+                    // font-size: clamp(1.5rem, 1.5vw, 1.8rem);
+                    @include md {
+                        margin: 0;
+                        font-size: 1.5rem;
+                    }
                 }
                 .item-meta-data {
-                    border: 2px solid yellow;
+                    // border: 2px solid yellow;
                     display: flex;
                     align-items: start;
-                    justify-content: space-between;
+                    // justify-content: space-evenly;
+                    gap: 1rem;
                     list-style: none;
-                    // margin-bottom: 5vh;
+                    // padding: 1rem 0;
+                    margin:  0 0 1rem 0;
+                    @include md {
+                        margin: 0;
+                    }
 
                     li {
-                        border: 1px solid #000;
+                        // border: 1px solid #000;
                         border-radius: .25rem;
-                        padding: .2rem;
-                        // height: 1rem;
+                        padding: .25rem .5rem;
+                        font-size: .8rem;
+                        background: $overlay-blue-darker;
+                        color: $text-light;
+                        transition: .25s;
+                        &:hover {
+                            color: $brand;
+                        }
                     }
 
                     @include md {
@@ -53,38 +77,78 @@
                     }
                 }
                 .item-description {
-                    border: 1px solid pink;
+                    // border: 1px solid pink;
+                    margin-bottom: 1rem;
+                    font-weight: 500;
+                    @include md {
+                        margin-bottom: 0;
+                    }
                 }
                 .item-cta {
-                    border: 2px solid blue;
-                    margin: 5vh 0;
-                    display: flex;;
+                    // border: 2px solid blue;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    
+                    gap: 1rem;
                     a {
-                        border: 2px solid #000;
-                        padding: .5rem;
+                        border: 1px solid #000;
+                        padding: 1rem .5rem;
                         text-transform: capitalize;
-                        font-size: .9rem;
+                        font-size: .95rem;
                         border-radius: .25rem;
+                        width: 100%;
+                        text-align: center;
+                        letter-spacing: .025rem;
+                        transition: .25s;
+                        &.cta-primary {
+                            background: $button-crimson;
+                            border: none;
+                            color: $text-light;
+                            i {
+                                transform: translateX(-.25rem);
+                                transition: .25s;
+                            }
+                            
+                        }
+                        &.cta-secondary {
+                            // padding: .25rem;
+                            font-size: .85rem;
+                        }
+                        &:hover {
+                            transform: scale(.98);
+                            letter-spacing: normal;
+                            i {
+                                transform: translateX(-.15rem);
+                            }
+                        }
                     }
                     @include md {
+                        // flex-direction: column;
                         justify-content: space-between;
-                        
+                        gap: 1rem;
                     }
                 }
             }
             .item-content {
-                border: 2px solid yellow;
+                // border: 2px solid yellow;
+                width: 100%;
+                @include md {
+                    width: 50%;
+                }
                 .item-image {
-                    height: 100%;
+                    // height: 50vh;
                     width: 100%;
-                    border: 6px solid green;
+                    // border: 2px solid green;
+                    margin: 0 auto;
                     img {
                         width: 100%;
                         height: 100%;
-                        border: 5px solid pink;
+                        border-radius: .25rem;
+                        // border: 2px solid pink;
                     }
-                    @include sm {
-                        width: 20rem;
+                    @include md {
+                        // width: 25rem;
                     }
                 }
             }
