--- a/css/style.css
+++ b/css/style.css
@@ -2896,7 +2896,7 @@ hamburger
 }
 .work .work-container .item .item-header .item-cta a {
   border: 1px solid #000;
-  padding: 1rem 0.5rem;
+  padding: 0.5rem;
   text-transform: capitalize;
   font-size: 0.95rem;
   border-radius: 0.25rem;
@@ -2905,30 +2905,32 @@ hamburger
   letter-spacing: 0.025rem;
   transition: 0.25s;
 }
+@media (min-width: 768px) {
+  .work .work-container .item .item-header .item-cta a {
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 1rem 0.5rem;
+  }
+}
 .work .work-container .item .item-header .item-cta a.cta-primary {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
   border: none;
   color: #f4f4f4;
 }
 .work .work-container .item .item-header .item-cta a.cta-primary i {
-  transform: translateX(-0.25rem);
+  transform: translateX(-0.5rem);
   transition: 0.25s;
 }
 .work .work-container .item .item-header .item-cta a.cta-secondary {
   font-size: 0.85rem;
+  color: #000;
 }
 .work .work-container .item .item-header .item-cta a:hover {
   transform: scale(0.98);
   letter-spacing: normal;
 }
 .work .work-container .item .item-header .item-cta a:hover i {
-  transform: translateX(-0.15rem);
-}
-@media (min-width: 768px) {
-  .work .work-container .item .item-header .item-cta {
-    justify-content: space-between;
-    gap: 1rem;
-  }
+  transform: translateX(-0.25rem);
 }
 .work .work-container .item .item-content {
   width: 100%;
