--- a/css/style.css
+++ b/css/style.css
@@ -2813,6 +2813,9 @@ hamburger
     padding: 5vh 5vw;
   }
 }
+.work .work-container {
+  margin-top: 10vh;
+}
 @media (min-width: 768px) {
   .work .work-container .item-flex-container {
     display: flex;
@@ -2948,6 +2951,10 @@ hamburger
   width: 100%;
   height: 100%;
   border-radius: 0.25rem;
+  transition: 0.5s;
+}
+.work .work-container .item .item-content .item-image:hover img {
+  transform: scale(1.1);
 }
 .work .work-items {
   display: grid;
